<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nexuslink.guidecar.ui.SettingActivity">

    <include
        layout="@layout/app_bar_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--主题设置模块-->
    <TextView
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--第一个card-->
    <android.support.v7.widget.CardView
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--夜间模式-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="?attr/myTextColorPrimary"
                        android:textSize="16sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/NightMode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor ="?attr/myTextColorSecondary"
                        android:textSize="12sp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/LightMode_Detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <Switch
                    android:id="@+id/night_mode_switch"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--手动分割线-->
            <LinearLayout
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:alpha="0.1"
                android:background="@color/colorBlackLight"
                android:layout_width="match_parent"
                android:layout_height="1dp">
            </LinearLayout>
            <!--自动夜间模式-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="?attr/myTextColorPrimary"
                        android:textSize="16sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/NightModeAuto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <!--文字暂为测试-->
                    <TextView
                        android:textColor="?attr/myTextColorSecondary"
                        android:textSize="12sp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="当前自动夜间模式时间为22:00~6:00"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <Switch
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--手动分割线-->
            <LinearLayout
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:alpha="0.1"
                android:background="@color/colorBlackLight"
                android:layout_width="match_parent"
                android:layout_height="1dp">
            </LinearLayout>

            <!--AccentColor设置-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="?attr/myTextColorPrimary"
                        android:textSize="16sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/AccentColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="?attr/myTextColorSecondary"
                        android:textSize="12sp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/AccentColorSet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <!--颜色预览-->
                <ImageView
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:background="@drawable/shape_current_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
